# Blockchain-Social-Security-Fund

./: .gitignore  readme.md
identity-broker/: README.md
identity-broker/src/identity-broker-backend/: Cargo.toml
identity-registry/: Cargo.toml  README.md  dfx.json
identity-registry/src/identity-registry-backend/: Cargo.toml
social-fund-backend/: Cargo.toml  README.md  dfx.json
social-fund-backend/fund-core/: Cargo.toml  README.md  dfx.json
social-fund-backend/fund-core/src/fund-core-backend/: Cargo.toml
social-fund-backend/identity-broker/: Cargo.toml  README.md  dfx.json
social-fund-backend/identity-broker/src/identity-broker-backend/: Cargo.toml  identity-broker-backend.did
social-fund-backend/identity-broker/src/identity-broker-backend/src/: google_verifier.rs  lib.rs  session_manager.rs  shadow_principal.rs
social-fund-backend/identity-broker/src/identity-broker-backend/src/recovery/: multi_factor.rs  social.rs
social-fund-backend/src/social-fund-backend-backend/: Cargo.toml  social-fund-backend-backend.did
social-fund-backend/src/social-fund-backend-backend/src/: ckbtc.rs  fund.rs  governance.rs  ipfs.rs  lib.rs  loans.rs  nfid_auth.rs  stake.rs  token_registry.rs  transactions.rs  user.rs  utils.rs
social-fund-backend/token-factory/: README.md
social-fund-backend/wallet-factory/: Cargo.toml  README.md
social-fund-backend/wallet-factory/src/wallet-factory-backend/: Cargo.toml
social-fund-backend/wallet-factory/src/wallet-factory-backend/src/: ecdsa_manager.rs  hd_wallet.rs  lib.rs  types.rs
social-fund-backend/wallet-factory/src/wallet-factory-backend/src/vaults/: ckbtc.rs  ckusdt.rs  icp.rs  mod.rs
social-fund-backend/watchdog/: Cargo.toml  README.md
social-fund-backend/watchdog/src/watchdog_backend/: Cargo.toml
social-fund-frontend/: .dockerignore  Dockerfile  docker-compose.yml  next.config.js  package-lock.json  package.json
social-fund-frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
social-fund-frontend/src/components/: GoogleSignInButton.tsx  LayoutWrapper.tsx  RoleSwitcher.tsx  Sidebar.tsx  WalletComponent.tsx
social-fund-frontend/src/contexts/: AuthContext.tsx
social-fund-frontend/src/hooks/: useSession.ts
social-fund-frontend/src/services/: icpService.ts
social-fund-wallet/: Cargo.toml  README.md  dfx.json
token-factory/: Cargo.toml  dfx.json
token-registry/: Cargo.toml  README.md  dfx.json
wallet-factory/: dfx.json
watchdog/: dfx.json
(+43 files in other folders)
