[package]
name = "identity-broker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-cdk-macros = "0.17"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2.0"
ring = "0.17"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
serde_json = "1.0"
sha2 = "0.10.9"
