[package]
name = "wallet-factory-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6"
thiserror = "2.0"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"
lru = "0.16.0"
bitcoin = "0.32.7"
sha2 = "0.10.9"
hmac = "0.12.1"
